# task-centric-knowledge

./: .gitignore  AGENTS.md  Makefile  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
assets/: agents-managed-block-1c.md  agents-managed-block-generic.md
assets/knowledge/: README.md
borrowings/grace/: README.md  source.json
knowledge/operations/: task-centric-knowledge-upgrade.md
knowledge/tasks/: README.md  registry.md
references/: adoption.md  consumer-runtime-v1.md  core-model.md  deployment.md  roadmap.md  task-routing.md  task-workflow.md  upgrade-transition.md
scripts/: check-docs-localization.sh  install_global_skill.py  install_skill.py  task_knowledge_cli.py  task_query.py  task_workflow.py
scripts/borrowings_runtime/: __init__.py  grace.py
scripts/install_skill_runtime/: __init__.py  cleanup.py  cli.py  doctor.py  environment.py  (+1 more)
tests/: task_workflow_testlib.py  test_borrowings_runtime.py  test_cli_golden_contracts.py  test_consumer_runtime_contract.py  test_file_local_contracts_runtime.py  test_git_ops_runtime.py  test_global_skill_install.py  test_install_skill.py  test_install_skill_architecture.py  test_install_skill_governance.py  test_module_query_architecture.py  test_module_query_runtime.py  test_module_verification_runtime.py  test_python_hardening_contracts.py  test_release_contract.py  test_task_knowledge_cli.py  test_task_query.py  test_task_query_architecture.py  test_task_workflow.py  test_task_workflow_architecture.py  test_task_workflow_markdown.py  test_task_workflow_publish.py  test_task_workflow_registry.py
(+234 files in other folders)
