[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "task-knowledge-cli"
version = "0.1.0"
description = "Единый CLI для install/query/workflow контуров task-centric knowledge."
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "ruff>=0.8",
]

[project.scripts]
task-knowledge = "task_knowledge.__main__:main"

[tool.setuptools]
py-modules = ["task_knowledge_cli"]

[tool.setuptools.package-dir]
"" = "scripts"

[tool.setuptools.packages.find]
where = ["scripts"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
  "E501",
]

[tool.mypy]
python_version = "3.11"
files = ["scripts"]
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
strict_optional = true
